--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
         "tsup": "^8.2.4",
         "tsx": "^4.16.2",
         "typescript": "^5.5.4",
-        "vitest": "^2.0.4"
+        "vitest": "^2.0.4",
+        "sqlite3": "^5.1.7"
     },
     "dependencies": {
         "@fastify/cookie": "^9.3.1",
         "dotenv": "^16.4.5",
         "fastify": "^4.28.1",
         "knex": "^3.1.0",
-        "sqlite3": "^5.1.7",
+        "pg": "^8.12.0",
         "zod": "^3.23.8"
     }
 }
